--- a/ontrack/public/styles.css
+++ b/ontrack/public/styles.css
@@ -48,13 +48,13 @@
   }
 
   .login-button {
-    background-color: #05A;
+    background-color: #3741A1; 
     color: #fff;
     font-size: larger;
     width: 8rem;
     height: 2.5rem;
 
-    border-color: #05A;
+    border-color: rgb(81, 131, 240); 
     border-radius: 0.5rem;
   }
 
@@ -106,8 +106,7 @@
   }
 
   .login-button:hover {
-    background-color: rgb(1, 70, 139);
-    border-color: rgb(1, 70, 139);
+    background-color: rgb(23, 23, 128)
   }
   
   .error {
@@ -331,10 +330,30 @@
   padding-top: 2rem;
  }
 
+ .mainHeader{
+  color: #3741A1;
+  text-align: center;
+  padding-top: 2rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 5rem;
+
+ }
+
  .abs-button{
 
   width: 16rem;
   height: 2.5rem;
+  text-align: center;
+  background: #3741A1;
+  border-radius: 4px;
+  border-color: rgb(81, 131, 240);
+  color: white;
+ }
+
+ .abs-button-smaller{
+
+  width: 10rem;
+  height: 2rem;
   text-align: center;
   background: #3741A1;
   border-radius: 4px;
